플랫폼 개발

--- a/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -24,7 +24,7 @@ $(window).load(function() {
 	showLoginBox();
 	$("#password").focus();
 	
-	JpUiDimmer.hideDimmer();
+	JpUiDimmer.hide();
 });
 
 $(window).resize(function() {
@@ -89,7 +89,7 @@ function doSubmit()
 			data: $("#FORM_password").serialize(),
 			beforeSend: function(jqXHR, settings)
 			{
-				JpUiDimmer.showDimmer();
+				JpUiDimmer.show();
 			},			
 			success: function(data, textStatus, jqXHR)
 			{
@@ -120,7 +120,7 @@ function doSubmit()
 					}
 					else
 					{
-						JpUiDimmer.hideDimmer();	
+						JpUiDimmer.hide();	
 					}
 				};
 			}
@@ -129,7 +129,7 @@ function doSubmit()
 };
 
 $(document).ready(function() {
-	JpUiDimmer.showDimmer();
+	JpUiDimmer.show();
 
 	$("#openNewWindow").on("click", function() {
 		window.open(INDEX_URL, new Date().getMilliseconds());
