--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -51,9 +51,18 @@ $(document).ready(function() {
 				$("#pageNumber").val(pageNumber);
 				doSearch();
 			},
-			onClickDataKey: function(element, key, row)
+			onClickDataKey: function(element, key, row, column, rowIndex, columnIndex)
 			{
-				goWrite(key);
+				if (columnIndex == 1)
+				{
+					JpUiPopup.open({
+						url: "/platform/mgmt/user/user_group/view?ugSeq=" + key
+					});
+				}
+				else if (columnIndex == 2)
+				{
+					goWrite(key);	
+				};
 			},				
 			checkbox: {
 				onChange: function() {
@@ -104,8 +113,13 @@ $(document).ready(function() {
 	});
 	
 	$("#BTN_delete").on("click", function() {
-		if (confirm("Do you want to delete?"))
+		if (listTable.getCheckedCount() == 0)
 		{
+			JpUiDimmer.alert("Please choose targets.");
+			return;
+		};
+		
+		JpUiDimmer.confirm("Do you want to delete?", function() {
 			JpUtilsAjax.post({
 				url: "/platform/mgmt/user/credentials/policy/delete",
 				data: $("#FORM_write").serialize(),
@@ -113,8 +127,8 @@ $(document).ready(function() {
 				{
 					listTable.load();
 				}
-			});					
-		};
+			});			
+		});
 	});
 	
 	doSearch();
