--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/bottom.html
@@ -39,7 +39,6 @@
 </div>
 <script>
 $(window).load(function() {
-	//$(".main.pusher").css("margin-left", $(".ui.main.sidebar").width() + 5);
 });
 
 $(document).ready(function() {
@@ -47,23 +46,22 @@ $(document).ready(function() {
 });
 
 $(document).ajaxStart(function() {	
-	JpUiDimmer.showDimmer();
+	JpUiDimmer.show();
 });
 
 $(document).ajaxStop(function() {
-	JpUiDimmer.hideDimmer();
+	JpUiDimmer.hide();
 });
 
 $(document).ajaxError(function(event, jqXHR, ajaxSettings, thrownError) {
 	if (jqXHR.status == "401" || jqXHR.status == "403")
 	{
 		alert("[[#{PLTF_M_SESSION_EXPIRED}]]");
-		document.location.href = "/";
+		document.location.href = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]";
 	}
 	else
 	{
 		alert("[[#{PLTF_M_ERROR_MESSAGE}]]");
-		//document.location.href = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).ERROR_PAGE_URL}]]";
 	};
 });
 
