--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/js.html
@@ -1,5 +1,6 @@
 <script th:src="@{/platform/js/jquery/jquery.min.js}"></script>
 <script th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery-ui.min.js}"></script>
 <script th:src="@{/platform/js/jquery/jquery.tablesort.min.js}"></script>
 <script th:src="@{/platform/js/semantic/semantic.min.js}"></script>
 <script th:src="@{/platform/js/semantic/calendar.min.js}"></script>
