--- a/jwebppy/src/main/resources/templates/platform/mgmt/board/content/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/board/content/write.html
@@ -176,7 +176,7 @@ $(document).ready(function() {
 					error: function(jqXHR, textStatus, errorThrown) {
 						let result = JSON.parse(jqXHR.responseText);
 						
-						alert(result.MESSAGE);
+						JpUiDimmer.alert(result.MESSAGE);
 					}
 			};
 			
