플랫폼 개발

--- a/jwebppy/src/main/resources/templates/platform/mgmt/board/content/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/board/content/list.html
@@ -101,7 +101,7 @@
 		$("#BTN_delete").on("click", function() {
 			if (listTable.getCheckedCount() == 0)
 			{
-				JpUiDimmer.alert("Please choose the articles to delete.");
+				JpUiDimmer.alert("Please choose articles to delete.");
 				return;
 			};
 			
