--- a/jwebppy/src/main/resources/templates/platform/common/authentication/login.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/login.html
@@ -30,6 +30,36 @@ let INDEX_URL = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]"
 $(window).load(function() {
 	showLoginBox();
 	
+	let loginFailType = JpUtilsString.trimToEmpty("[[${#request.getAttribute(T(org.jwebppy.platform.core.PlatformConfigVo).FORM_LOGIN_FAIL_TYPE)}]]");
+	
+	if (JpUtilsString.isEmpty(loginFailType))
+	{
+		setFocus();
+	}
+	else
+	{
+		if (loginFailType == "CredentialsExpired")
+		{
+			//비밀번호 초기화 or 만료 시 초기 비밀번호 변경 화면으로 이동
+			JpUiDimmer.alert("[[#{PLTF_M_PASSWORD_EXPIRED}]]", function() {
+				document.location.href = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_PASSWORD_CHANGE_PAGE_URL}]]";	
+			});
+		}
+		else
+		{
+			JpUiDimmer.alert("[[#{PLTF_M_LOGIN_AUTHENTICATION_FAILED}]]", function() {
+				setFocus();
+			});
+		};
+	};
+});
+
+$(window).resize(function() {
+	resizeView();	
+});
+
+function setFocus()
+{
 	if (JpUtilsString.isNotEmpty($("#username").val()))
 	{
 		$("#password").select();
@@ -37,29 +67,8 @@ $(window).load(function() {
 	else
 	{
 		$("#username").select();
-	};
-	
-	let loginFailType = JpUtilsString.trimToEmpty("[[${#request.getAttribute(T(org.jwebppy.platform.core.PlatformConfigVo).FORM_LOGIN_FAIL_TYPE)}]]");
-	
-	if (JpUtilsString.isNotEmpty(loginFailType))
-	{
-		if (loginFailType == "CredentialsExpired")
-		{
-			alert("[[#{PLTF_M_PASSWORD_EXPIRED}]]");
-			document.location.href = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_PASSWORD_CHANGE_PAGE_URL}]]";
-		}
-		else
-		{
-			alert("[[#{PLTF_M_LOGIN_AUTHENTICATION_FAILED}]]");
-		};
-	};
-	
-	JpUiDimmer.hide();
-});
-
-$(window).resize(function() {
-	resizeView();	
-});
+	};	
+};
 
 /*
  * HD: 1280X720
@@ -71,18 +80,22 @@ function resizeView()
 	$("#IMG_main").height($(window).height());
 };
 
-function loginCheck()
+function checkForm()
 {
 	if ($.trim($("#username").val()) == "")
 	{
-		alert("[[#{PLTF_M_LOGIN_EMPTY_USERNAME}]]");
-		$("#username").focus();
+		JpUiDimmer.alert("[[#{PLTF_M_LOGIN_EMPTY_USERNAME}]]", function() {
+			$("#username").focus();	
+		});
+		
 		return false;
 	}
 	else if ($.trim($("#password").val()) == "")
 	{
-		alert("[[#{PLTF_M_LOGIN_EMPTY_PWD}]]");
-		$("#password").focus();			
+		JpUiDimmer.alert("[[#{PLTF_M_LOGIN_EMPTY_PWD}]]", function() {
+			$("#password").focus();	
+		});		
+		
 		return false;				
 	};
 	
@@ -104,15 +117,13 @@ function login()
 };
 
 $(document).ready(function() {
-	JpUiDimmer.show();
-	
 	if (JpUtilsString.isNotEmpty($.cookie("username")))
 	{
 		$("#username").val($.cookie("username"));
 	};	
 	
 	$(".btn-login").on("click", function() {
-		if (loginCheck())
+		if (checkForm())
 		{
 			login();
 		};	
@@ -121,7 +132,7 @@ $(document).ready(function() {
 	$("#username, #password").on("keydown", function(event) {
 		if (event.keyCode == 13)
 		{
-			if (loginCheck())
+			if (checkForm())
 			{
 				login();
 			}
@@ -151,6 +162,17 @@ $(document).ready(function() {
 	resizeView();
 });
 
+//인증 실패 후 새로고침 시 인증실패 페이지가 계속 reload 되는 것을 방지 
+$(document).on("keydown", function(event){
+	//F5 키 누름 체크
+	if (event.keyCode == 116)
+	{
+		document.location.href = INDEX_URL;
+		event.stopPropagation();
+		return false;
+	};
+});
+
 function showLoginBox()
 {
 	$(".login-box").toggle("drop", 300);
@@ -159,7 +181,7 @@ function showLoginBox()
 </head>
 <body>
 <div id="openNewWindow" style="position: fixed; top: 5px; right: 5px; cursor: pointer; font-weight: bold;">New Window</div>
-<form id="FORM_login" method="post" th:action="${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_LOGIN_PROCESSING_URL}" onsubmit="return loginCheck();">
+<form id="FORM_login" method="post" th:action="${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_LOGIN_PROCESSING_URL}" onsubmit="return checkForm();">
 <input type="hidden" id="saveUsername" name="saveUsername" />
 <div id="wrap" class="wrap">
 	<div style="text-align: center">
