--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/js.html
@@ -13,6 +13,7 @@
 <script th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.number.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.ajax.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.download.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.dateformat.js}"></script>
 <script th:src="@{/platform/js/jWebppy.utils.path.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.render.js}"></script>
