--- a/jwebppy/src/main/resources/templates/platform/mgmt/board/content/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/board/content/write.html
@@ -38,13 +38,13 @@
 	<th:block th:if="${board.fgSetPeriod == T(org.jwebppy.platform.core.PlatformCommonVo).YES}">	
 	<div class="ui divider"></div>
 	<div class="fields">		
-		<div class="six wide field">
+		<div class="eight wide field">
 			<label>Visible From</label>
 			<div class="ui calendar">
 				<div class="ui input left icon"><i class="calendar icon"></i><input type="TEXT" id="fromView" name="fromView" placeholder="From Date"/></div>
 			</div>				
 		</div>
-		<div class="six wide field">
+		<div class="eight wide field">
 			<label>Visible To</label>
 			<div class="ui calendar">
 				<div class="ui input left icon"><i class="calendar icon"></i><input type="TEXT" id="toView" name="toView" placeholder="To Date"/></div>
@@ -97,7 +97,7 @@ $(document).ready(function() {
 		if (JpUtilsString.isNotEmpty($("#bcSeq").val()))
 		{
 			JpUtilsAjax.get({
-				url: "/platform/mgmt/board/content/detail/data",
+				url: "/platform/mgmt/board/content/view/data",
 				data: { bcSeq: $("#bcSeq").val() },
 				success: function(data, textStatus, jqXHR) {
 					let result = data.RESULT;
@@ -189,7 +189,7 @@ $(document).ready(function() {
 		
 		if (JpUtilsString.isNotEmpty($("#bcSeq").val()))
 		{
-			url = "/platform/mgmt/board/content/detail";
+			url = "/platform/mgmt/board/content/view";
 		};
 		
 		$("#FORM_write").attr("action", url).attr("method", "get");
@@ -219,11 +219,16 @@ $(document).ready(function() {
 				
 				for (let j=0, length=files.length; j<length; j++)
 				{
+					if (files[j] == null)
+					{
+						continue;
+					}
+					
 					if (JpUtilsString.equals(files[j].name, fileName))
 					{
-						files.splice(j, 1);
+						files.splice(j, 1, null);
 					};
-				};
+				};		
 				
 				if (JpUtilsString.isNotEmpty($(this).val()))
 				{
@@ -282,6 +287,7 @@ $(document).ready(function() {
 		else
 		{
 			result.push(size);
+			result.push("B");
 		};
 		
 		return result.join("");
