--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/write.html
@@ -49,8 +49,35 @@ $(document).ready(function() {
 							}
 						]
 					},
-					"Default SAP Connection Reousrce": {
-						identifier: "scrSeq",
+					"Date Format (Back-End)": {
+						identifier: "dateFormat1",
+						rules: [
+							{
+								type: "empty",
+								prompt: "Please input {name}."
+							}
+						]
+					},
+					"Time Format (Back-End)": {
+						identifier: "timeFormat1",
+						rules: [
+							{
+								type: "empty",
+								prompt: "Please input {name}."
+							}
+						]
+					},
+					"Date Format (Front-End)": {
+						identifier: "dateFormat2",
+						rules: [
+							{
+								type: "empty",
+								prompt: "Please input {name}."
+							}
+						]
+					},
+					"Time Format (Front-End)": {
+						identifier: "timeFormat2",
 						rules: [
 							{
 								type: "empty",
