--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/top.html
@@ -142,7 +142,7 @@ function makeGmb()
 	    	
 	    	if (data != null && $.trim(data.regDate) != "")
 	    	{
-	    		$("#lastLoginTime").html(moment(data.regDate).format(DateFormat.FULL_FORMAT) + "/" + data.ip);
+	    		$("#lastLoginTime").html(data.regDate + "/" + data.ip);
 	    	}
 	    	else
 	    	{
