--- a/jwebppy/src/main/resources/templates/portal/scm/parts/common/info/dealer/detail.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/common/info/dealer/detail.html
@@ -184,7 +184,7 @@ $.ajax({
 		$("#STCD4").html(result.STCD4);
 		$("#KUNNR").html(result.KUNNR);
 		$("#STCD1").html(result.STCD1);
-		$("#ERDAT").html(DateFormat.dateFormat(result.ERDAT));
+		$("#ERDAT").html(JpUtilsDateFormat.dateFormat(result.ERDAT));
 		$("#VKORG_T").html(result.VKORG_T);
 		$("#VTWEG_T").html(result.VTWEG_T);
 		$("#SPART_T").html(result.SPART_T);
