--- a/jwebppy/src/main/resources/templates/platform/common/authentication/login.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/login.html
@@ -82,7 +82,7 @@ function resizeView()
 
 function checkForm()
 {
-	if ($.trim($("#username").val()) == "")
+	if (JpUtilsString.isEmpty($("#username").val()))
 	{
 		JpUiDimmer.alert("[[#{PLTF_M_LOGIN_EMPTY_USERNAME}]]", function() {
 			$("#username").focus();	
@@ -90,7 +90,7 @@ function checkForm()
 		
 		return false;
 	}
-	else if ($.trim($("#password").val()) == "")
+	else if (JpUtilsString.isEmpty($("#password").val()))
 	{
 		JpUiDimmer.alert("[[#{PLTF_M_LOGIN_EMPTY_PWD}]]", function() {
 			$("#password").focus();	
@@ -181,7 +181,7 @@ function showLoginBox()
 </head>
 <body>
 <div id="openNewWindow" style="position: fixed; top: 5px; right: 5px; cursor: pointer; font-weight: bold;">New Window</div>
-<form id="FORM_login" method="post" th:action="${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_LOGIN_PROCESSING_URL}" onsubmit="return checkForm();">
+<form id="FORM_login" method="post" th:action="${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_LOGIN_PROCESSING_URL}">
 <input type="hidden" id="saveUsername" name="saveUsername" />
 <div id="wrap" class="wrap">
 	<div style="text-align: center">
