--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
@@ -105,7 +105,7 @@ function makeGmb()
 			    		
 			    		if (JpUtilsString.isNotEmpty(data.displayZonedRegDate))
 			    		{
-			    			$("#gmbLastLoginTime").html(moment(data.displayZonedRegDate).format(DateFormat.FULL_FORMAT) + " / " + data.ip);
+			    			$("#gmbLastLoginTime").html(data.displayZonedRegDate + " / " + data.ip);
 			    		};
 			    	};
 			    }	
