--- a/jwebppy/src/main/resources/templates/platform/layout/common/index.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/index.html
@@ -10,7 +10,14 @@
 <th:block th:replace="platform/layout/common/fragments/css"></th:block>
 <!-- JavaScript -->
 <th:block th:replace="platform/layout/common/fragments/js"></th:block>
-	
+
+<script>
+/* Set up static values */
+JpUtilsDateFormat.DATE_TIME_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getDateTimeFormat2()}]]";
+JpUtilsDateFormat.DATE_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getDateFormat2()}]]";
+JpUtilsDateFormat.TIME_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getTimeFormat2()}]]";
+</script>
+
 <style type="text/css">
 	.main.container {
 		margin-top: 4em;
