--- a/jwebppy/src/main/resources/templates/platform/layout/popup/index.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/index.html
@@ -2,25 +2,32 @@
 <html
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-	<head>
-		<title th:text="#{PLTF_T_0006}"></title>
-		<!-- Meta -->
-		<th:block th:replace="platform/layout/popup/fragments/meta"></th:block>
-		<!-- CSS -->
-		<th:block th:replace="platform/layout/popup/fragments/css"></th:block>
-		<!-- JavaScript -->
-		<th:block th:replace="platform/layout/popup/fragments/js"></th:block>
-			
-		<style type="text/css">
-			.main.container {
-				margin-top: 4em;
-			}
-			
-			html {
-				overflow-y: hidden;
-			}
-		</style>
-	</head>
+<head>
+<title th:text="#{PLTF_T_0006}"></title>
+<!-- Meta -->
+<th:block th:replace="platform/layout/popup/fragments/meta"></th:block>
+<!-- CSS -->
+<th:block th:replace="platform/layout/popup/fragments/css"></th:block>
+<!-- JavaScript -->
+<th:block th:replace="platform/layout/popup/fragments/js"></th:block>
+	
+<script>
+/* Set up static values */
+JpUtilsDateFormat.DATE_TIME_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getDateTimeFormat2()}]]";
+JpUtilsDateFormat.DATE_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getDateFormat2()}]]";
+JpUtilsDateFormat.TIME_FORMAT = "[[${T(org.jwebppy.platform.core.util.UserAuthenticationUtils).getUserDetails().getTimeFormat2()}]]";
+</script>	
+	
+<style type="text/css">
+	.main.container {
+		margin-top: 4em;
+	}
+	
+	html {
+		overflow-y: hidden;
+	}
+</style>
+</head>
 <body>
 	<!-- Header start -->
 	<th:block th:replace="platform/layout/popup/fragments/top"></th:block>
