플랫폼 개발

--- a/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -1,21 +1,28 @@
-<!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html
+	xmlns:th="http://www.thymeleaf.org"
+	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+<meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
+<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}" />
 <title th:text="#{PLTF_T_0006}"></title>
 
 <link rel="stylesheet" type="text/css" th:href="@{/platform/css/login/login.css}" />
 <link rel="stylesheet" type="text/css" class="ui" th:href="@{/platform/css/semantic/semantic.min.css}" />
 
 <script th:src="@{/platform/js/jquery/jquery.min.js}"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
-<script th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
-<script th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
 <script th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery-ui.min.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.ajax.js}"></script>
+<script th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
 <script th:src="@{/platform/js/semantic/semantic.min.js}"></script>
 <script>
 let INDEX_URL = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]";
@@ -45,34 +52,44 @@ function checkForm()
 {
 	if (JpUtilsString.isEmpty($("#password").val()))
 	{
-		alert("[[#{PLTF_M_LOGIN_EMPTY_PWD}]]");
-		$("#password").focus();			
+		JpUiDimmer.alert("[[#{PLTF_M_LOGIN_EMPTY_PWD}]]", function() {
+			$("#password").focus();	
+		});
+					
 		return false;				
 	}
 	else if (JpUtilsString.isEmpty($("#newPassword").val()))
 	{
-		alert("[[#{PLTF_M_EMPTY_NEW_PWD}]]");
-		$("#newPassword").focus();			
+		JpUiDimmer.alert("[[#{PLTF_M_EMPTY_NEW_PWD}]]", function() {
+			$("#newPassword").focus();
+		});
+		
 		return false;
 	}
 	else if (JpUtilsString.isEmpty($("#confirmPassword").val()))
 	{
-		alert("[[#{PLTF_M_EMPTY_CONFIRM_PWD}]]");
-		$("#confirmPassword").focus();			
+		JpUiDimmer.alert("[[#{PLTF_M_EMPTY_CONFIRM_PWD}]]", function() {
+			$("#confirmPassword").focus();
+		});
+		
 		return false;				
 	}
 	else if (JpUtilsString.notEquals($("#newPassword").val(), $("#confirmPassword").val()))
 	{
-		alert("[[#{PLTF_M_NOT_PASSWORD_MATCH}]]");
-		$("#newPassword").focus();
+		JpUiDimmer.alert("[[#{PLTF_M_NOT_PASSWORD_MATCH}]]", function() {
+			$("#newPassword").focus();
+		});
+		
 		return false;
 	}
 	else if (JpUtilsString.equals($("#password").val(), $("#newPassword").val()))
 	{
-		alert("[[#{	PLTF_M_NOT_ALLOWABLE_PASSWORD}]]");
-		$("#newPassword").focus();
+		JpUiDimmer.alert("[[#{	PLTF_M_NOT_ALLOWABLE_PASSWORD}]]", function() {
+			$("#newPassword").focus();
+		});
+		
 		return false;		
-	}
+	}	
 	
 	return true;
 };
@@ -81,11 +98,8 @@ function doSubmit()
 {
 	if (checkForm())
 	{
-		let url = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_PASSWORD_CHANGE_PROCESSING_URL}]]";
-		
-		$.ajax({
-			type: "POST", //GET, POST
-			url: url,
+		JpUtilsAjax.post({
+			url: "[[${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_PASSWORD_CHANGE_PROCESSING_URL}]]",
 			data: $("#FORM_password").serialize(),
 			beforeSend: function(jqXHR, settings)
 			{
@@ -99,32 +113,31 @@ function doSubmit()
 				
 				if (checkResult == 1)
 				{
-					alert("[[#{PLTF_M_CHANGE_PASSWORD_SUCCESS}]]");
-					document.location.href = INDEX_URL;
+					JpUiDimmer.alert("[[#{PLTF_M_CHANGE_PASSWORD_SUCCESS}]]", function() {
+						document.location.href = INDEX_URL;
+					});
 				}
 				else
 				{
-					alert(checkResult);
-					
 					let message = "";
 					
 					$.each(result.MESSAGE, function (index, value) {
 						message += value + "\n";
+					});
+					
+					JpUiDimmer.alert(message, function() {
+						if (checkResult == -999)
+						{
+							document.location.href = INDEX_URL;
+						}
+						else
+						{
+							JpUiDimmer.hide();	
+						};	
 					});					
-					
-					alert(message);
-					
-					if (checkResult == -999)
-					{
-						document.location.href = INDEX_URL;
-					}
-					else
-					{
-						JpUiDimmer.hide();	
-					}
 				};
 			}
-		});		
+		});
 	};
 };
 
@@ -149,7 +162,7 @@ $(document).ready(function() {
 	$("input[type=password]").on("keydown", function(event) {
 		if (event.keyCode==13)
 		{
-			doSubmit();	
+			doSubmit();
 		};
 	});
 	
@@ -164,7 +177,7 @@ function showLoginBox()
 </head>
 <body>
 <div style="position: fixed; top: 5px; right: 5px; cursor: pointer; font-weight: bold;"><span id="goHome">Home</span> | <span id="openNewWindow">New Window</span></div>
-<form id="FORM_password" method="post">
+<form id="FORM_password" method="post" autocomplete="off" onsubmit="return false;">
 <div id="wrap" class="wrap">
 	<div style="text-align: center">
 		<img id="IMG_main" th:src="@{/platform/img/login/main2.jpg}" alt="Main Image" />
