--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
@@ -165,9 +165,19 @@ function checkExpiredPassword()
 			
 			if (difference < 15)
 			{
-				JpUiDimmer.confirm("Your password will expire on " + result.expiredDate + ". Please change it within the date.<br/>Do you want to change it now?", function() {
-					document.location.href = [[${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_PASSWORD_CHANGE_PAGE_URL}]];
-				});				
+				if (difference < 0)
+				{
+					JpUiDimmer.alert("Your password has expired. Please change it now.", function() {
+						document.location.href = [[${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_PASSWORD_CHANGE_PAGE_URL}]];
+					});
+				}
+				else
+				{
+					JpUiDimmer.confirm("Your password will expire on " + result.expiredDate + ". Please change your password within the date.<br/>Do you want to change it now?", function() {
+						document.location.href = [[${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_PASSWORD_CHANGE_PAGE_URL}]];
+					});					
+				};
+
 			};
 		}
 	});
